k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-dashboard
  namespace: default
  labels:
    app: devops-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-dashboard
  template:
    metadata:
      labels:
        app: devops-dashboard
    spec:
      serviceAccountName: devops-dashboard-sa
      containers:
        - name: dashboard
          image: siddheshinde1/devops-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
